Ссылки на подкаталоги

--- a/practice_3/control_panel/listing.html
+++ b/practice_3/control_panel/listing.html
@@ -2,13 +2,16 @@
 <html>
 <head>
    <meta charset=utf-8 />
-   <title>Index of home directory </title>
+   <title>Index of home directory</title>
 </head>
 <body>
    <h1>Listing directory {{dir_name}}</h1>
-   <ul>
+   <ul type="circle">
    {% for item in files %}
-   <li>{{ item }}
+   <li>{{ item }}</li>
+   {% endfor %}
+   {% for item in dirs %}
+   <li><a href="{{ item }}">{{ item }}</a></li>
    {% endfor %}
    </ul>
 </body>
