Вывод карточки книги

--- a/practice_4/book_list.html
+++ b/practice_4/book_list.html
@@ -5,23 +5,19 @@
    <title>Books</title>
 </head>
 <body>
-   <h1>Book list</h1>
-   {% if books %}
+   <h1>Books info</h1>
    <table border="1">
    <tr>
       <th>Title</th>
       <th>Author</th>
-      <th>Book publisher</th>
-   {% for book in books %}
-   <tr>
-      <td><a href="{{ book.get_absolute_url }}">{{ book.title }}</a></td>
-      <td>{% for author in book.authors.all %}{{ author.first_name | add:author.last_name }}; {% endfor %}</td>
-      <td>{{ book.publisher.title }}</td>
+      <th>Publisher</th>
    </tr>
-   {% endfor %}
+   <tr>
+      <td>{{ books }}</td>
+      <td>{% for author in books.authors.all %} <a href="{{ author.get_absolute_url }}">{{ author }}</a>; {% endfor %}</td>
+      <td>{{ books.publisher }}</td>
+   </tr>
    </table>
-   {% else %}
-   <p> No books </p>
-  {% endif %}
 </body>
 </html>
+
