Исправлен вывод карточки автора

--- a/practice_4/author_list.html
+++ b/practice_4/author_list.html
@@ -7,9 +7,13 @@
 <body>
    <h1>Authors info</h1>
    <table border="1">
-   <th>Name and surname</th>
+   <tr>
+      <th>Name and surname</th>
+      <th>Email</th>
+   </tr>
    <tr>
       <td>{{ authors }}</td>
+      <td>{{ authors.email }}</td>
    </tr>
    </table>
 </body>
